S13nServiceWorker: Make unittests around activation pass

Before S13nServiceWorker, SWVersion::RemoveControllee() immendiately and
synchronously triggered activation. However, after S13nServiceWorker, activation
happens only after the renderer reports the worker's idle and it successfully
finishes. Currently some unit tests assume that RemoveControllee() triggers
activation, so this CL makes sure all tasks for activation run by calling
RequestTermination() and task runner's methods like RunUntilIdle() and
RunPendingTasks().

Bug: 895187
Change-Id: I9cc73d97299a781a366e7f22e2ded90e17a8d367
Reviewed-on: https://chromium-review.googlesource.com/c/1286234
Commit-Queue: Makoto Shimazu <shimazu@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600313}
Former-commit-id: 10bdfaa4154a1faafea4d48e09bf564e939fc531